// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render correctly when fullWidth & required props are falsy 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 8px 0px 0px;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  grid-area: description;
  margin: 5px 0px 0px 2px;
  color: #818A91;
}

.c0 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(max-content,80%);
  grid-template-areas: 'label field' 'random description';
}

.c0 .c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c3:focus {
  border-color: #012040;
  outline: 0;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c3::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1 c2"
      for="email-input"
    >
      Email Address
    </label>
    <input
      class="c3"
      id="email-input"
      label="Email Address"
      placeholder="Enter Email Address"
      type="email"
    />
    <span
      class="c4 c5"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;

exports[`Input component should render correctly when it is disabled 1`] = `
.c0 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ededed;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c1:focus {
  border-color: #012040;
  outline: 0;
}

.c1::-webkit-input-placeholder {
  color: #999999;
}

.c1::-moz-placeholder {
  color: #999999;
}

.c1:-ms-input-placeholder {
  color: #999999;
}

.c1::placeholder {
  color: #999999;
}

.c1::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
  >
    
    <input
      class="c1"
      disabled=""
      id="email-input"
      label=""
      placeholder="Enter Email Address"
    />
    
  </div>
</div>
`;

exports[`Input component should render correctly when label and description are not given 1`] = `
.c0 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c1:focus {
  border-color: #012040;
  outline: 0;
}

.c1::-webkit-input-placeholder {
  color: #999999;
}

.c1::-moz-placeholder {
  color: #999999;
}

.c1:-ms-input-placeholder {
  color: #999999;
}

.c1::placeholder {
  color: #999999;
}

.c1::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
  >
    
    <input
      class="c1"
      id="email-input"
      label=""
      placeholder="Enter Email Address"
      type="email"
    />
    
  </div>
</div>
`;

exports[`Input component should render correctly with all the props given 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 0px 8px 0px;
}

.c2::after {
  color: red;
  content: ' *';
}

.c5 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c1 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  grid-area: description;
  margin: 5px 0px 0px 2px;
  color: #818A91;
}

.c0 {
  margin: 8px 0px;
  display: grid;
  grid-template-areas: 'label' 'field' 'description';
}

.c0 .c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
  width: calc(100% - 0px);
}

.c3:focus {
  border-color: #012040;
  outline: 0;
}

.c3::-webkit-input-placeholder {
  color: #999999;
}

.c3::-moz-placeholder {
  color: #999999;
}

.c3:-ms-input-placeholder {
  color: #999999;
}

.c3::placeholder {
  color: #999999;
}

.c3::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1 c2"
      for="email-input"
      required=""
    >
      Email Address
    </label>
    <input
      class="c3"
      id="email-input"
      label="Email Address"
      placeholder="Enter Email Address"
      required=""
      type="email"
    />
    <span
      class="c4 c5"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;
